--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "codegen": "rm -rf src/generated/* && graphql-codegen"
+    "codegen": "rm -rf src/generated/* && graphql-codegen",
+    "prisma:fresh": "rm -rf prisma/dev.db && yarn prisma:migrate && yarn prisma:seed",
+    "prisma:migrate": "prisma migrate deploy",
+    "prisma:seed": "prisma db seed",
+    "postinstall": "yarn prisma:fresh && yarn codegen"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
