--- a/backend/package.json
+++ b/backend/package.json
@@ -20,17 +20,18 @@
     "@graphql-tools/merge": "^8.3.18",
     "@graphql-tools/schema": "^9.0.16",
     "@prisma/client": "4.11.0",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0"
   },
   "devDependencies": {
+    "@graphql-codegen/add": "^4.0.1",
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/typescript": "^3.0.2",
+    "@graphql-codegen/typescript-resolvers": "^3.1.1",
     "@types/node": "^18.14.6",
     "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "@graphql-codegen/cli": "^3.2.2",
-    "@graphql-codegen/add": "^4.0.1",
-    "@graphql-codegen/typescript": "^3.0.2",
-    "@graphql-codegen/typescript-resolvers": "^3.1.1"
+    "typescript": "^4.9.5"
   }
 }
