--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "codegen": "graphql-codegen"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^3.2.2",
     "@graphql-codegen/client-preset": "^2.1.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "ts-node": "^10.9.1"
   }
 }
