--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "dev": "react-scripts start && yarn codegen --watch",
+    "dev": "yarn codegen && react-scripts start && yarn codegen --watch",
     "build": "react-scripts build",
     "codegen": "graphql-codegen"
   },
