--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "dev": "conc -r 'yarn codegen;react-scripts start;yarn codegen --watch';",
+    "dev": "yarn codegen & react-scripts start & yarn codegen --watch",
     "build": "react-scripts build",
     "codegen": "graphql-codegen"
   },
@@ -40,7 +40,6 @@
     "@graphql-codegen/cli": "^3.2.2",
     "@graphql-codegen/client-preset": "^2.1.1",
     "@graphql-codegen/typescript-react-apollo": "^3.3.7",
-    "ts-node": "^10.9.1",
-    "concurrently": "^7.6.0"
+    "ts-node": "^10.9.1"
   }
 }
